[package]
name = "selene-helius-sdk"
version = "0.1.1-beta.1"
edition = "2021"
authors = ["dougefresh <dchimento@gmail.com>"]
description = "Rust implementation of the Helius API & RPC"
readme = "README.md"
repository = "https://github.com/dougEfresh/selene-helius-sdk"
homepage = "https://github.com/dougEfresh/selene-helius-sdk"
documentation = "https://docs.rs/selene-helius-sdk/0.1.0/selene_helius_sdk/"
license = "MIT"
keywords = ["solana", "helius"]
categories = ["cryptography::cryptocurrencies"]
exclude = [
  "assets/*",
  ".github",
  "CONTRIBUTING.md",
  "*.log",
  "Dockerfile",
  ".env*",
  ".dockerignore",
  "codecov.yml"
]
rust-version = "1.76.0"


[lib]
name = "selene_helius_sdk"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
implicit_return = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_const_for_fn = "allow"


[dependencies]
solana-client = { version = ">= 1.16"  }
solana-sdk = { version = ">= 1.16" }
reqwest = {version = "0.11", features = [ "json"] }
serde-enum-str = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
derive-alias = "0.1"
tokio = { version = "> 1.24", features = ["full"] }
color-eyre = { version = "0.6" }
thiserror = "1"
url = "2"
tracing = {  version = "0.1" }
tracing-log = {version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
bigdecimal = {  version = "^0.3", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15"
solana-transaction-status = "1"
once_cell = "1"
rstest = "0.18"
