[package]
name = "selene-helius-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "selene-helius-bot"
path = "src/main.rs"

[dependencies]
selene-helius-sdk = { path = "../" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = { version = "0.4" , features = ["std", "serde", "kv_unstable", "kv_unstable_serde"] }
tracing = {  version = "0.1" }
tracing-log = {version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
color-eyre = { version = "0.6" }
teloxide = "0.12"
clap = { version = "4", features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles", "env"] }
serde = { version = "1", features = ["derive"] }
dashmap = { version = "5" }
prometheus = {  version = "0.13" }